<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="space.twobit.mono.ImageProcessingActivity">


    <RelativeLayout
        android:id="@+id/fl_image_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_image_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageViewBefore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/the_unprocessed_picture"
                android:visibility="visible" />


            <ImageView
                android:id="@+id/imageViewAfter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/the_processed_picture"
                android:visibility="visible" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pb_processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/seekBar_container"
        style="@style/ImageSelectionButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:max="100"
            android:padding="10dp"
            android:progress="50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/btn_threshold"
                style="@style/ImageSelectionButtonBar.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:drawableTop="@drawable/ic_text_format_black_24px"
                android:hint="@string/threshold" />

            <ToggleButton
                android:id="@+id/btn_gaussian"
                style="@style/ImageSelectionButtonBar.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:drawablePadding="@dimen/btn_image_processing_padding"
                android:drawableTop="@drawable/ic_adjust_black_24px"
                android:hint="@string/gaussian" />

            <Button
                android:id="@+id/btn_save"
                style="@style/ImageSelectionButtonBar.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/btn_image_processing_padding"
                android:drawableTop="@drawable/ic_save_black_24px"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_share"
                style="@style/ImageSelectionButtonBar.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/btn_image_processing_padding"
                android:drawableTop="@drawable/ic_share_black_24px"
                android:text="@string/share" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
